# exploring-word2vec

./: .gitignore  README.md  main.py  pyproject.toml  word2vec-exploration.ipynb
tools/: process_text.py
utils/: text_toolbox.py
