[project]
name = "exploring-word2vec"
version = "0.1.0"
description = ""
authors = [
    {name = "AndersonIvanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim (>=4.3.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
